--- a/Sail Calculator/HTML - SailCalc.html
+++ b/Sail Calculator/HTML - SailCalc.html
@@ -4,7 +4,10 @@ Sail Area (In Square Feet)<br>
 <Input type="text" name="Sail Area" ID="Sail Area" ><br>
 Displacement (In Pounds)<br>
 <input type="text" name="Displacement" ID= "Displacement" ><br>
+Beam (In Feet)<br>
+<input type="text" name="Beam" ID= "Beam"><br>
 <input type="button" id= "click" value="Get Results!" onClick= "worker();">
+
 <p id ="results"></p>
 </form>
 
