--- a/Sail Calculator/HTML - SailCalc.html
+++ b/Sail Calculator/HTML - SailCalc.html
@@ -6,6 +6,8 @@ Displacement (In Pounds)<br>
 <input type="text" name="Displacement" ID= "Displacement" ><br>
 Beam (In Feet)<br>
 <input type="text" name="Beam" ID= "Beam"><br>
+Length Water Line (In Feet)<br>
+<input type="text" name="LWL" id="LWL"><br>
 <input type="button" id= "click" value="Get Results!" onClick= "worker();">
 
 <p id ="results"></p>
