Added Comfort Ratio to Form

--- a/Sail Calculator/HTML - SailCalc.html
+++ b/Sail Calculator/HTML - SailCalc.html
@@ -8,6 +8,10 @@ Beam (In Feet)<br>
 <input type="text" name="Beam" ID= "Beam"><br>
 Length Water Line (In Feet)<br>
 <input type="text" name="LWL" id="LWL"><br>
+Length Over All (In Feet)<br>
+<input type="text" name="LOA" id="LOA"><br>
+
+ 
 <input type="button" id= "click" value="Get Results!" onClick= "worker();">
 
 <p id ="results"></p>
