--- a/Sail Calculator/HTML - SailCalc.html
+++ b/Sail Calculator/HTML - SailCalc.html
@@ -12,7 +12,7 @@ Length Over All (In Feet)<br>
 <input type="text" name="LOA" id="LOA"><br>
 
  
-<input type="button" id= "click" value="Get Results!" onClick= "worker();">
+<input type="button" id= "click" value="Get Results!" onClick= "setUp();">
 
 <p id ="results"></p>
 </form>
